--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Ryocon/triangle-sketch#readme",
   "dependencies": {
     "canvas-sketch": "^0.7.6",
-    "canvas-sketch-util": "^1.10.0"
+    "canvas-sketch-util": "^1.10.0",
+    "riso-colors": "^1.0.1"
   }
 }
